# rag-agno-astro-example

./: .dockerignore  .gitignore  Makefile  docker-compose.yml  readme.md  skills-lock.json
.specify/: feature.json  (+1 more)
apps/backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  start.sh
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 001_initial_chat_schema.py  002_research_schema.py  002_whatsapp_settings.py  003_research_costs.py  004_active_run_concurrency_index.py
apps/backend/scripts/: __init__.py  backfill_chat_agno_sessions.py
apps/backend/src/agentos_chat/: __init__.py  main.py  settings.py
apps/backend/src/agentos_chat/agents/: research_agent.py  search_agent.py  whatsapp_agent.py
apps/backend/tests/: conftest.py
apps/backend/tests/contract/: test_chat_sessions_contract.py  test_chat_stream_contract.py  test_research_delete_contract.py  test_research_status_filter_contract.py  test_stop_run_contract.py
apps/backend/tests/integration/: test_auth_api.py  test_chat_history_context.py  test_whatsapp_error_handling.py  test_whatsapp_new_session.py  test_whatsapp_session_context.py  test_whatsapp_settings_api.py  test_whatsapp_webhook.py
apps/backend/tests/scenarios/: test_research_scenarios.py
apps/backend/tests/unit/: test_auth_jwt.py  test_concurrency.py  test_event_mapper.py  test_langwatch.py  test_research_agent.py  test_research_service.py  test_run_events.py  test_run_executor.py  test_whatsapp_gate.py  test_whatsapp_settings_repository.py  test_whatsapp_webhook_security.py
(+207 files in other folders)
