[project]
name = "agentos-chat"
version = "0.1.0"
description = "FastAPI backend for AgentOS chat search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "agno>=1.7.0",
  "openai>=1.0.0",
  "duckduckgo-search>=7.0.0",
  "ddgs>=9.0.0",
  "httpx>=0.28.0",
  "python-multipart>=0.0.17",
  "langwatch>=0.3.0",
  "openinference-instrumentation-agno>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
]

[project.scripts]
agentos-chat = "agentos_chat.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentos_chat"]

[tool.hatch.build.targets.editable]
packages = ["src/agentos_chat"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
"src/agentos_chat/db/models.py" = ["UP042"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.mypy-overrides]
module = ["agno.*", "duckduckgo_search.*"]
ignore_missing_imports = true
